# freeboard

./: .gitignore  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_nickname.py  0003_alter_user_bio_alter_user_email_and_more.py
board/: admin.py  forms.py  models.py  urls.py  views.py
board/fixtures/: initial_data.json
board/migrations/: 0001_initial.py  0002_rename_title_board_name_board_updated_at_and_more.py  0003_vote.py  0004_remove_post_view_count_post_views.py  0005_alter_comment_options_alter_comment_content_and_more.py  0006_post_content_html_alter_post_content_and_more.py
config/: settings.py  urls.py
static/css/: style.css
templates/: base.html
templates/account/: login.html
templates/accounts/: profile.html  profile_edit.html  signup.html
templates/board/: all_boards.html  board_detail.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
templates/includes/: footer.html  navbar.html
