[project]
name = "freeboard"
version = "0.1.0"
description = ""
authors = [
    {name = "guk1987",email = "guk1987@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-allauth (>=65.4.1,<66.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "markdown (>=3.7,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"

